ctnLoading z-index fix

--- a/src/sass/components/_spinner.scss
+++ b/src/sass/components/_spinner.scss
@@ -1,45 +1,52 @@
 #ctnLoading {
-    height: 100%;
-    max-height: 100%;
-    position: absolute;
-    top: 0;
-    background-color: white;
-    width: 100%;
-    z-index: 1000;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    animation: hide 3s;
-    opacity: 0;
+  height: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  animation: hide 3s;
+  z-index: -50;
+  opacity: 0;
 }
 
 #loading {
-    margin: auto;
-    width: 50px;
-    height: 50px;
-    border: 3px solid rgba(255,255,255,.3);
-    border-radius: 50%;
-    border-top-color: $purpleBtn;
-    animation: spin 1s infinite;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(255, 255, 255, .3);
+  border-radius: 50%;
+  border-top-color: $purpleBtn;
+  animation: spin 1s infinite;
+}
+
+@keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
   }
-  
-  @keyframes spin {
-    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes hide {
+  from {
+    opacity: 1;
+    height: 100%;
+    z-index: 10;
   }
 
-  @keyframes hide {
-      from {
-          opacity: 1;
-          height: 100%;
-      }
-      99% {
-          opacity: 1;
-          height: 100%;
-      }
-    to {
-        opacity: 0;
-        height: 0% !important;
-        max-height: 0px !important;
-        overflow: hidden;
-    }
+  99% {
+    opacity: 1;
+    height: 100%;
+    z-index: 10;
   }
+  100% {
+    opacity: 0;
+    height: 0% !important;
+    max-height: 0px !important;
+    overflow: hidden;
+    z-index: 0;
+  }
+  
+}
