--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -6,13 +6,21 @@ main {
     justify-content: center;
     animation: appear 3s;
     z-index: 100;
+
     @keyframes appear {
-        from {opacity: 0;}
+        from {
+            opacity: 0;
+        }
+
         99% {
             opacity: 1;
         }
-        to {opacity: 1;}
+
+        to {
+            opacity: 1;
+        }
     }
+
     .ctnLocalisation {
         padding: 20px 0px 20px 0px;
         background-color: $secondary-color;
@@ -38,7 +46,9 @@ main {
         text-align: center;
         height: 200px;
         width: 100%;
-        h2,p {
+
+        h2,
+        p {
             width: 80%;
         }
 
@@ -49,21 +59,25 @@ main {
         height: 400px;
         justify-content: flex-start;
         align-items: flex-start;
+
         @media screen and (min-width:$startDesktop) {
             height: fit-content;
             padding-bottom: 20px;
         }
+
         ul {
             width: 100%;
             clear: both;
             list-style: none;
             list-style-position: outside !important;
+
             @media screen and (min-width:$startDesktop) {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: space-evenly;
             }
+
             li {
                 margin: auto;
                 counter-increment: inst;
@@ -73,33 +87,42 @@ main {
                 padding: 20px 0px 20px 0px;
                 border-radius: 15px;
                 box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-                cursor:default;
+                cursor: default;
+
+                &:hover {
+                    background-color: $whitePink;
+
+                    .operationIcons {
+                        color: $darkPurple;
+                    }
+                }
+
                 @media screen and (min-width:$startDesktop) {
                     width: 30%;
                     max-width: 475px;
                     display: flex;
                     flex-direction: row;
                 }
+
                 .operationIcons {
                     margin: 0px 5px 0px 5px;
                     font-size: 20px;
                     color: $darkGray;
+
                     @media screen and (min-width:350px) {
                         margin: 0px 30px 0px 30px;
                     }
                 }
+
                 span {
                     margin: auto;
                     font-weight: bold;
                 }
-                &:hover {
-                    background-color: $whitePink;
-                    .operationIcons {
-                        color: $darkPurple;
-                    }
-                }
-                
+
+
+
             }
+
             li::before {
                 content: counter(inst);
                 background: $darkPurple;
@@ -119,26 +142,32 @@ main {
         justify-content: flex-start;
         background-color: $secondary-color;
         padding-bottom: 30px;
+
         ul {
             width: 100%;
             list-style: none;
+
             @media screen and (min-width:$ipad) {
                 flex-direction: row;
                 flex-wrap: wrap;
             }
+
             li {
                 margin-bottom: 20px;
                 width: 100%;
+
                 @media screen and (min-width:$ipad) {
                     width: 45%;
                     display: flex;
                     flex-direction: column;
                     align-items: flex-end;
                 }
+
                 @media screen and (min-width:$startDesktop) {
                     flex-basis: 34%;
 
                 }
+
                 span {
                     color: $darkGreen;
                     background-color: $lightGreen;
@@ -147,30 +176,36 @@ main {
                     right: 40px;
                     margin-top: 15px;
                     border-radius: 5px;
+
                     @media screen and (min-width:$ipad) {
                         position: relative;
                         bottom: -40px;
                         left: -10px;
                     }
                 }
+
                 figure {
                     width: 90%;
                     margin: auto;
                     border-radius: 15px;
                     background-color: #fff;
+
                     @media screen and (min-width:$ipad) {
                         width: 100%;
-                        
+
                     }
+
                     img {
                         width: 100%;
                         height: 180px;
                         border-top-right-radius: $borderRadiusRestaurantsCards;
                         border-top-left-radius: $borderRadiusRestaurantsCards;
+
                         @media screen and (min-width:$ipad) {
                             height: 350px;
                         }
                     }
+
                     figcaption {
                         display: flex;
                         flex-direction: row;
@@ -178,6 +213,7 @@ main {
                         justify-content: space-between;
                         border-bottom-right-radius: $borderRadiusRestaurantsCards;
                         border-bottom-left-radius: $borderRadiusRestaurantsCards;
+
                         div {
                             margin: 10px;
                         }
