--- a/src/sass/pages/_menu.scss
+++ b/src/sass/pages/_menu.scss
@@ -7,6 +7,9 @@ header {
     .fa-arrow-left {
         font-size: 20px;
     }
+    h1 {
+        width: 100%;
+    }
 }
 
 .ctnMenus {
